# meshcore-web-keygen

./: .gitignore  OPTIMIZATION-NOTES.md  PERFORMANCE-OPTIMIZATIONS.md  README.md  WEBGPU_README.md  app.js  ed25519-curve.wgsl  ed25519-gpu.wgsl  ed25519-keygen.wgsl  index.html  package-lock.json  package.json  playwright.config.js  test-wasm-optimized.html  test-webcrypto.html  test-webgpu.html  wasm-keygen.js  wasm-worker.js  webcrypto-keygen.js  webcrypto-worker.js  webgpu-ed25519.js  webgpu-keygen-hybrid.js  webgpu-keygen.js
.claude/: launch.json
gpu_module/: README.md  package.json
gpu_module/scripts/: build-ed25519-table.mjs  build-gpu-module.mjs
gpu_module/src/: webgpu-ed25519-table.js  webgpu-ed25519.js
instructions/: index.html
scripts/: build-browser-deps.mjs  build-ed25519-table.mjs
src/: app.js  webgpu-ed25519-table.js  webgpu-ed25519.js
tests/: webgpu-keygen.spec.js
wasm/: Cargo.toml  build.sh  worker.js
wasm/pkg/: meshcore_keygen.d.ts  meshcore_keygen_bg.wasm  meshcore_keygen_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
webgpu/: ed25519.wgsl  gpu-keygen.js  precompute.js
